new api to query accounts for sp
