# lib/models/speech-credential.js
@@ -1,6 +1,7 @@
 const Model = require('./model');
 const {promisePool} = require('../db');
 const retrieveSql = 'SELECT * from speech_credentials WHERE account_sid = ?';
+const retrieveSqlForSP = 'SELECT * from speech_credentials WHERE service_provider_sid = ?';
 
 class SpeechCredential extends Model {
   constructor() {
@@ -12,6 +13,10 @@ class SpeechCredential extends Model {
    */
   static async retrieveAll(account_sid) {
     const [rows] = await promisePool.query(retrieveSql, account_sid);
+    return rows;
+  }
+  static async retrieveAllForSP(service_provider_sid) {
+    const [rows] = await promisePool.query(retrieveSqlForSP, service_provider_sid);
     return rows;
   }
 
@@ -44,7 +49,10 @@ SpeechCredential.fields = [
   {
     name: 'account_sid',
     type: 'string',
-    required: true
+  },
+  {
+    name: 'service_provider_sid',
+    type: 'string',
   },
   {
     name: 'vendor',
