# lib/models/voip-carrier.js
@@ -1,46 +1,22 @@
 const Model = require('./model');
-const {getMysqlConnection} = require('../db');
-const sql = 'SELECT * from voip_carriers vc WHERE vc.account_sid = ?';
+const {promisePool} = require('../db');
+const retrieveSql = 'SELECT * from voip_carriers vc WHERE vc.account_sid = ?';
+const retrieveSqlForSP = 'SELECT * from voip_carriers vc WHERE vc.service_provider_sid = ?';
 
 
 class VoipCarrier extends Model {
   constructor() {
     super();
   }
-
-  static retrieveAll(account_sid) {
+  static async retrieveAll(account_sid) {
     if (!account_sid) return super.retrieveAll();
-
-    return new Promise((resolve, reject) => {
-      getMysqlConnection((err, conn) => {
-        if (err) return reject(err);
-        conn.query(sql, account_sid, (err, results, fields) => {
-          conn.release();
-          if (err) return reject(err);
-          resolve(results);
-        });
-      });
-    });
+    const [rows] = await promisePool.query(retrieveSql, account_sid);
+    return rows;
   }
-
-  /**
-   * retrieve an application
-   */
-  static retrieve(sid, account_sid) {
-    if (!account_sid) return super.retrieve(sid);
-
-    return new Promise((resolve, reject) => {
-      getMysqlConnection((err, conn) => {
-        if (err) return reject(err);
-        conn.query(`${sql} AND vc.voip_carrier_sid = ?`, [account_sid, sid], (err, results, fields) => {
-          conn.release();
-          if (err) return reject(err);
-          resolve(results);
-        });
-      });
-    });
+  static async retrieveAllForSP(service_provider_sid) {
+    const [rows] = await promisePool.query(retrieveSqlForSP, service_provider_sid);
+    return rows;
   }
-
 }
 
 VoipCarrier.table = 'voip_carriers';
@@ -61,6 +37,10 @@ VoipCarrier.fields = [
   },
   {
     name: 'account_sid',
+    type: 'string',
+  },
+  {
+    name: 'service_provider_sid',
     type: 'string',
   },
   {
