# lib/routes/api/accounts.js
@@ -11,27 +11,11 @@ const uuidv4 = require('uuid/v4');
 const snakeCase = require('../../utils/snake-case');
 const sysError = require('../error');
 const {promisePool} = require('../../db');
+const {hasAccountPermissions} = require('./utils');
 const short = require('short-uuid');
 const translator = short();
 
 let idx = 0;
-
-const hasAccountPermissions = (req, res, next) => {
-  if (req.user.hasScope('admin')) return next();
-  if (req.user.hasScope('account')) {
-    const account_sid = parseAccountSid(req.originalUrl);
-    if (account_sid === req.user.account_sid) return next();
-  }
-  res.status(403).json({
-    status: 'fail',
-    message: 'insufficient privileges'
-  });
-};
-
-const parseAccountSid = (url) => {
-  const arr = /Accounts\/([^\/]*)/.exec(url);
-  if (arr) return arr[1];
-};
 
 router.use('/:sid/SpeechCredentials', hasAccountPermissions, require('./speech-credentials'));
 router.use('/:sid/RecentCalls', hasAccountPermissions, require('./recent-calls'));
@@ -218,7 +202,7 @@ async function validateAdd(req) {
   if (req.user.hasAccountAuth) {
     throw new DbErrorUnprocessableRequest('insufficient permissions to create accounts');
   }
-  if (req.user.hasServiceProviderAuth) {
+  if (req.user.hasServiceProviderAuth && req.user.service_provider_sid) {
     /* service providers can only create accounts under themselves */
     req.body.service_provider_sid = req.user.service_provider_sid;
   }
@@ -276,7 +260,7 @@ router.post('/', async(req, res) => {
       }
     }
 
-    //logger.debug(`Attempting to add account ${JSON.stringify(obj)}`);
+    logger.debug(`Attempting to add account ${JSON.stringify(obj)}`);
     const uuid = await Account.make(obj);
     res.status(201).json({sid: uuid});
   } catch (err) {
