# lib/routes/api/service-providers.js
@@ -2,6 +2,8 @@ const router = require('express').Router();
 const {DbErrorUnprocessableRequest} = require('../../utils/errors');
 const Webhook = require('../../models/webhook');
 const ServiceProvider = require('../../models/service-provider');
+const Account = require('../../models/account');
+const {hasServiceProviderPermissions, parseServiceProviderSid} = require('./utils');
 const sysError = require('../error');
 const decorate = require('./decorate');
 const preconditions = {
@@ -15,6 +17,20 @@ async function noActiveAccounts(req, sid) {
 }
 
 decorate(router, ServiceProvider, ['delete'], preconditions);
+
+router.use('/:sid/SpeechCredentials', hasServiceProviderPermissions, require('./speech-credentials'));
+router.use('/:sid/PredefinedCarriers', hasServiceProviderPermissions, require('./add-from-predefined-carrier'));
+
+router.get('/:sid/Accounts', async(req, res) => {
+  const logger = req.app.locals.logger;
+  try {
+    const service_provider_sid = parseServiceProviderSid(req);
+    const results = await Account.retrieveAll(service_provider_sid);
+    res.status(200).json(results);
+  } catch (err) {
+    sysError(logger, res, err);
+  }
+});
 
 /* add */
 router.post('/', async(req, res) => {
