# lib/routes/api/speech-credentials.js
@@ -2,6 +2,7 @@ const router = require('express').Router();
 const SpeechCredential = require('../../models/speech-credential');
 const sysError = require('../error');
 const {decrypt, encrypt} = require('../../utils/encrypt-decrypt');
+const {parseAccountSid, parseServiceProviderSid} = require('./utils');
 const {DbErrorUnprocessableRequest, DbErrorBadRequest} = require('../../utils/errors');
 const {
   testGoogleTts,
@@ -9,15 +10,19 @@ const {
   testAwsTts,
   testAwsStt
 } = require('../../utils/speech-utils');
-const parseAccountSid = (url) => {
-  const arr = /Accounts\/([^\/]*)/.exec(url);
-  if (arr) return arr[1];
-};
 
 router.post('/', async(req, res) => {
   const logger = req.app.locals.logger;
   const {use_for_stt, use_for_tts, vendor, service_key, access_key_id, secret_access_key} = req.body;
   const {account_sid} = req.user;
+  let service_provider_sid;
+  if (!account_sid) {
+    if (!req.user.hasServiceProviderAuth) {
+      logger.error('POST /SpeechCredentials invalid credentials');
+      return res.send(403);
+    }
+    service_provider_sid = parseServiceProviderSid(req);
+  }
   try {
     let encrypted_credential;
     if (vendor === 'google') {
@@ -44,6 +49,7 @@ router.post('/', async(req, res) => {
     else throw new DbErrorBadRequest(`invalid speech vendor ${vendor}`);
     const uuid = await SpeechCredential.make({
       account_sid,
+      service_provider_sid,
       vendor,
       use_for_tts,
       use_for_stt,
@@ -59,10 +65,15 @@ router.post('/', async(req, res) => {
  * retrieve all speech credentials for an account
  */
 router.get('/', async(req, res) => {
-  const account_sid = parseAccountSid(req.originalUrl);
+  let service_provider_sid;
+  const account_sid = parseAccountSid(req);
+  if (!account_sid) service_provider_sid = parseServiceProviderSid(req);
   const logger = req.app.locals.logger;
   try {
-    const creds = await SpeechCredential.retrieveAll(account_sid);
+    const creds = account_sid ?
+      await SpeechCredential.retrieveAll(account_sid) :
+      await SpeechCredential.retrieveAllForSP(service_provider_sid);
+
     res.status(200).json(creds.map((c) => {
       const {credential, ...obj} = c;
       if ('google' === obj.vendor) {
